--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ footer:
 author: '王兆斌'
 nickname: '左耳'
 bio: 'web安全爱好者，热爱技术&设计，简单乐观爱创造'
-avatar: '/assets/img/profile.png'
+avatar: '/assets/img/1.jpg'
 
 # Search
 search: true
@@ -56,10 +56,10 @@ postPatterns: 'circuitBoard'
 # SNS settings 配置社交网站
 # url: email, weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
 sns:
-  weibo: '//weibo.com/lovecolcol'
+  weibo: '//weibo.com/6520473321/profile?rightmod=1&wvr=6&mod=personinfo'
   juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
-  instagram: '//www.instagram.com/steveliaocn'
-  github: '//github.com/kaeyleo'
+  instagram: '//www.instagram.com/'
+  github: '//github.com/zuoer26188'
 
 # Tags 设置标签
 recommend-tags: true # whether or not display recommend-tags on the sidebar
