--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings 配置站点
 title: '左耳的独立博客'
 description: '昵称左耳，千禧一代，web安全爱好者/伪极客/灵魂摄影师，热爱技术&设计。很高兴能在这里与你分享我对技术和生活的思考。'
-keyword: '王兆斌, 王兆斌的独立博客, 王兆斌的博客, 前端, 前端开发, 前端博客, javascript, vuejs, nodejs, 设计'
+keyword: '王兆斌, 王兆斌的独立博客, 王兆斌的博客, 前端,web安全'
 url: '' # your host
 
 # when build blog on server, if you don't need baseurl, you should leave this value blank.
